--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "express": "^4.13.4",
+    "pg-hstore": "^2.3.2",
+    "redis-connection": "^4.0.3",
+    "sequelize": "^3.22.0",
+    "socket.io": "^1.4.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Andrew Lawson <aeriklawson@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "express": "^4.13.4",
-    "redis-connection": "^4.0.3",
-    "socket.io": "^1.4.5"
-  }
+  "bugs": {
+    "url": "https://github.com/aelawson/film_comments_chrome/issues"
+  },
+  "homepage": "https://github.com/aelawson/film_comments_chrome#readme"
 }
